# pyo3-ort

./: README.md  pyproject.toml  run.py
.cargo/: config.toml
python/testapp/: __init__.py
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/app/: Cargo.toml
rust/app-py/: Cargo.toml
rust/app-py/src/: app_wrapper.rs  lib.rs
rust/app/src/: lib.rs  main.rs  onnx_runner.rs
